--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,7 @@
         {% endif %}
       {% endif%}
       </p>
+        <a href="https://www.freeprivacypolicy.com/live/b43606b2-8558-4fba-ae93-d2ff805139bc">Privacy Policy</a>
       {% unless site.remove-ads %}<p class="theme-by text-muted">
         Powered by
         <a href="https://beautifuljekyll.com">Beautiful Jekyll</a>
